--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.9.0",
     "immer": "^10.0.3",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.376.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
